--- a/.github/workflows/TCS.yml
+++ b/.github/workflows/TCS.yml
@@ -1,4 +1,4 @@
-name: ESP-IDF Build Multiple Projects
+name: ESP-IDF Build Multiple Projects (Docker)
 
 on:
   push:
@@ -9,19 +9,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        project:
+          - TCS-Mini/TCSDG-TCS-Mini-LoRa
+          - TCS-Master/TCSDG-TCS-Master-Main
+
+    container:
+      image: espressif/idf:v5.4
 
     steps:
-      # 1. Checkout repository
-      - name: Checkout code
+      # 1. Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Install ESP-IDF v5.4
-      - name: Install ESP-IDF
-        uses: espressif/install-esp-idf-action@v1
-        with:
-          version: 'v5.4'
-
-      # 3. Cache Python dependencies
+      # 2. Cache Python dependencies
       - name: Cache Python dependencies
         uses: actions/cache@v3
         with:
@@ -30,46 +32,27 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      # 4. Install Python dependencies
+      # 3. Install Python dependencies if needed
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          for f in TCS-Mini/TCSDG-TCS-Mini-LoRa/requirements.txt TCS-Master/TCSDG-TCS-Master-Main/requirements.txt; do
-            if [ -f $f ]; then pip install -r $f; fi
-          done
+          REQ="${{ matrix.project }}/requirements.txt"
+          if [ -f $REQ ]; then pip install -r $REQ; fi
 
-      # ---------------------
-      # Build TCS-Mini project
-      # ---------------------
-      - name: Build TCS-Mini Project
+      # 4. Build project
+      - name: Build project
         run: idf.py build
-        working-directory: TCS-Mini/TCSDG-TCS-Mini-LoRa
+        working-directory: ${{ matrix.project }}
 
-      - name: Upload TCS-Mini binaries
+      # 5. Upload binaries
+      - name: Upload binaries
         uses: actions/upload-artifact@v4
         with:
-          name: firmware-mini
+          name: firmware-${{ matrix.project }}
           path: |
-            TCS-Mini/TCSDG-TCS-Mini-LoRa/build/*.bin
-            TCS-Mini/TCSDG-TCS-Mini-LoRa/build/*.elf
+            ${{ matrix.project }}/build/*.bin
+            ${{ matrix.project }}/build/*.elf
 
-      - name: Clean up TCS-Mini build folder
-        run: rm -rf TCS-Mini/TCSDG-TCS-Mini-LoRa/build
-
-      # ---------------------
-      # Build TCS-Master project
-      # ---------------------
-      - name: Build TCS-Master Project
-        run: idf.py build
-        working-directory: TCS-Master/TCSDG-TCS-Master-Main
-
-      - name: Upload TCS-Master binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: firmware-master
-          path: |
-            TCS-Master/TCSDG-TCS-Master-Main/build/*.bin
-            TCS-Master/TCSDG-TCS-Master-Main/build/*.elf
-
-      - name: Clean up TCS-Master build folder
-        run: rm -rf TCS-Master/TCSDG-TCS-Master-Main/build
+      # 6. Clean up build folder
+      - name: Clean up build folder
+        run: rm -rf ${{ matrix.project }}/build
